Updates schedule with breaks, etc.

--- a/index.html
+++ b/index.html
@@ -227,37 +227,57 @@
                   <td>Tom Kenter, Maarten de Rijke</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="timeslot">10:00 - 11:00</th>
-                  <td>Semantic Matching I</td>
+                  <th scope="row" class="timeslot">10:00 - 10:30</th>
+                  <td>Text Matching I</td>
                   <td>Alexey Borisov, Bhaskar Mitra</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="timeslot">11:00 - 12:00</th>
-                  <td>Semantic Matching II</td>
+                  <th scope="row" class="timeslot">10:30 - 10:50</th>
+                  <td>Coffee break</td>
+                  <td />
+                </tr>
+                <tr>
+                  <th scope="row" class="timeslot">10:50 - 11:20</th>
+                  <td>Text Matching I (cont'd)</td>
+                  <td>Alexey Borisov, Bhaskar Mitra</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="timeslot">11:20 - 12:20</th>
+                  <td>Text Matching II</td>
                   <td>Mostafa Deghani, Christophe Van Gysel</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="timeslot">13:00 - 14:00</th>
+                  <th scope="row" class="timeslot">12:20 - 14:00</th>
+                  <td>Lunch break</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th scope="row" class="timeslot">14:00 - 14:45</th>
                   <td>Learning to Rank</td>
                   <td>Christophe Van Gysel, Bhaskar Mitra</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="timeslot">14:00 - 14:45</th>
+                  <th scope="row" class="timeslot">14:45 - 15:30</th>
                   <td>Modeling User Behavior</td>
                   <td>Alexey Borisov, Maarten de Rijke</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="timeslot">14:45 - 15:30</th>
+                  <th scope="row" class="timeslot">15:30 - 15:50</th>
+                  <td>Coffee break</td>
+                  <td />
+                </tr>
+                <tr>
+                  <th scope="row" class="timeslot">15:50 - 16:35</th>
                   <td>Generating Responses</td>
                   <td>Mostafa Deghani, Tom Kenter</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="timeslot">15:30 - 16:15</th>
+                  <th scope="row" class="timeslot">16:35 - 17:05</th>
                   <td>Outlook</td>
                   <td>All presenters</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="timeslot">16:15 - 16:30</th>
+                  <th scope="row" class="timeslot">17:05 - 17:20</th>
                   <td>Wrap Up</td>
                   <td>Tom Kenter</td>
                 </tr>
