--- a/index.html
+++ b/index.html
@@ -83,9 +83,6 @@
         .marketing p + h4 {
             margin-top: 1.5rem;
         }
-        .marketing a {
-            color: #292b2c;
-        }
         .marketing a:hover {
             text-decoration: none;
         }
@@ -210,7 +207,7 @@
         <div id="schedule" class="container marketing">
             <h1 style="text-align: center">Schedule</h1>
 
-            <p>The tutorial is organized in 8 sections as described below. Times below are indicative and are likely to change.</p>
+            <p>The tutorial is organized in 8 parts as described below (times are indicative). For more details, see the <a href="https://arxiv.org/abs/1707.04242" target="_new">overview paper</a> on arXiv.</p>
 
             <table class="table">
               <thead>
