Small fix to CSS.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         .marketing p + h4 {
             margin-top: 1.5rem;
         }
+        div#organizers a {
+            color: #292b2c;
+        }
         .marketing a:hover {
             text-decoration: none;
         }
