--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <h1 style="text-align: center">Organizers</h1>
             <div class="row">
                 <div class="col-lg-4">
-                    <a href="http://tomkenter.nl/"><img class="rounded-circle" src="http://0.gravatar.com/avatar/62643c35e8d765ed27b9909a72293bfa?s=180&d=mm&r=g" alt="Tom Kenter" width="100" height="100">
+                    <a href="http://tomkenter.nl/index.php?lang=en"><img class="rounded-circle" src="http://0.gravatar.com/avatar/62643c35e8d765ed27b9909a72293bfa?s=180&d=mm&r=g" alt="Tom Kenter" width="100" height="100">
                         <h2>Tom Kenter</h2>
                     </a>
                 </div>
