Adds draft slides.

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
                   <th>Time slot</th>
                   <th>Topic</th>
                   <th>Presenters</th>
+                  <th />
                 </tr>
               </thead>
               <tbody>
@@ -231,11 +232,13 @@
                   <th scope="row" class="timeslot">09:00 - 10:00</th>
                   <td>Preliminaries</td>
                   <td>Tom Kenter, Maarten de Rijke</td>
+                  <td><a href="slides/02_Preliminaries.pdf" target="_blank">draft slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">10:00 - 10:30</th>
                   <td>Text Matching I</td>
                   <td>Alexey Borisov, Bhaskar Mitra</td>
+                  <td><a href="slides/03_TextMatchingI.pdf" target="_blank">draft slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">10:30 - 10:50</th>
@@ -246,11 +249,13 @@
                   <th scope="row" class="timeslot">10:50 - 11:20</th>
                   <td>Text Matching I (cont'd)</td>
                   <td>Alexey Borisov, Bhaskar Mitra</td>
+                  <td><a href="slides/03_TextMatchingI.pdf" target="_blank">draft slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">11:20 - 12:20</th>
                   <td>Text Matching II</td>
                   <td>Mostafa Deghani, Christophe Van Gysel</td>
+                  <td><a href="slides/04_TextMatchingII.pdf" target="_blank">draft slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">12:20 - 14:00</th>
@@ -261,11 +266,13 @@
                   <th scope="row" class="timeslot">14:00 - 14:45</th>
                   <td>Learning to Rank</td>
                   <td>Christophe Van Gysel, Bhaskar Mitra</td>
+                  <td><a href="slides/05_LearningToRank.pdf" target="_blank">draft slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">14:45 - 15:30</th>
                   <td>Modeling User Behavior</td>
                   <td>Alexey Borisov, Maarten de Rijke</td>
+                  <td><a href="slides/06_ModelingUserBehavior.pdf" target="_blank">draft slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">15:30 - 15:50</th>
@@ -276,6 +283,7 @@
                   <th scope="row" class="timeslot">15:50 - 16:35</th>
                   <td>Generating Responses</td>
                   <td>Mostafa Deghani, Tom Kenter</td>
+                  <td><a href="slides/07_GeneratingResponses.pdf" target="_blank">draft slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">16:35 - 17:05</th>
