Also include references.

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                   <th scope="row" class="timeslot">10:30 - 10:50</th>
                   <td>Coffee break</td>
                   <td />
+                  <td />
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">10:50 - 11:20</th>
@@ -260,7 +261,8 @@
                 <tr>
                   <th scope="row" class="timeslot">12:20 - 14:00</th>
                   <td>Lunch break</td>
-                  <td></td>
+                  <td />
+                  <td />
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">14:00 - 14:45</th>
@@ -278,6 +280,7 @@
                   <th scope="row" class="timeslot">15:30 - 15:50</th>
                   <td>Coffee break</td>
                   <td />
+                  <td />
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">15:50 - 16:35</th>
@@ -289,14 +292,18 @@
                   <th scope="row" class="timeslot">16:35 - 17:05</th>
                   <td>Outlook</td>
                   <td>All presenters</td>
+                  <td />
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">17:05 - 17:20</th>
                   <td>Wrap Up</td>
                   <td>Tom Kenter</td>
+                  <td />
                 </tr>
               </tbody>
             </table>
+
+            <p><a href="slides/References.pdf" target="_blank">References</a></p>
         </div>
 
         <div id="organizers" class="container marketing">
