--- a/index.html
+++ b/index.html
@@ -229,7 +229,13 @@
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row" class="timeslot">09:00 - 10:00</th>
+                  <th scope="row" class="timeslot">09:00 - 09:05</th>
+                  <td>Introduction</td>
+                  <td>Tom Kenter</td>
+                  <td><a href="slides/01_Introduction.pdf" target="_blank">draft slides</a></td>
+                </tr>
+                <tr>
+                  <th scope="row" class="timeslot">09:05 - 10:00</th>
                   <td>Preliminaries</td>
                   <td>Tom Kenter, Maarten de Rijke</td>
                   <td><a href="slides/02_Preliminaries.pdf" target="_blank">draft slides</a></td>
@@ -289,16 +295,10 @@
                   <td><a href="slides/07_GeneratingResponses.pdf" target="_blank">draft slides</a></td>
                 </tr>
                 <tr>
-                  <th scope="row" class="timeslot">16:35 - 17:05</th>
-                  <td>Outlook</td>
-                  <td>All presenters</td>
-                  <td />
-                </tr>
-                <tr>
-                  <th scope="row" class="timeslot">17:05 - 17:20</th>
+                  <th scope="row" class="timeslot">16:35 - 17:20</th>
                   <td>Wrap Up</td>
-                  <td>Tom Kenter</td>
-                  <td />
+                  <td>All presenters</td>
+                  <td><a href="slides/08_WrapUp.pdf" target="_blank">draft slides</a></td>
                 </tr>
               </tbody>
             </table>
