Final version of slides.

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="jumbotron" style="position: relative; z-index: 0; padding-bottom: 1em">
             <h1 style="font-size: 2em">Neural Networks for Information Retrieval</h1>
             <p class="lead">Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems.</p>
-            <p><a class="btn btn-lg btn-success" href="http://sigir.org/sigir2017/" role="button">Register now on the SIGIR website</a></p>
+            <p><a class="btn btn-lg btn-success" href="slides/NN4IR.pdf" target="_blank" role="button" style="padding-top: .50rem; padding-bottom: .50rem; padding-left: 1rem"><img src="images/glyphicons-201-download.png" /> &nbsp; <span style="display: inline; vertical-align: text-top;">Download full deck of slides (PDF, 18MB)</span></a></p>
             <h5>Full-day tutorial at SIGIR 2017 on August 7, 2017</h5>
         </div>
         <!-- /.container -->
@@ -232,19 +232,19 @@
                   <th scope="row" class="timeslot">09:00 - 09:05</th>
                   <td>Introduction</td>
                   <td>Tom Kenter</td>
-                  <td><a href="slides/01_Introduction.pdf" target="_blank">draft slides</a></td>
+                  <td><a href="slides/01_Introduction.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">09:05 - 10:00</th>
                   <td>Preliminaries</td>
                   <td>Tom Kenter, Maarten de Rijke</td>
-                  <td><a href="slides/02_Preliminaries.pdf" target="_blank">draft slides</a></td>
+                  <td><a href="slides/02_Preliminaries.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">10:00 - 10:30</th>
                   <td>Text Matching I</td>
                   <td>Alexey Borisov, Bhaskar Mitra</td>
-                  <td><a href="slides/03_TextMatchingI.pdf" target="_blank">draft slides</a></td>
+                  <td><a href="slides/03_TextMatchingI.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">10:30 - 10:50</th>
@@ -256,13 +256,13 @@
                   <th scope="row" class="timeslot">10:50 - 11:20</th>
                   <td>Text Matching I (cont'd)</td>
                   <td>Alexey Borisov, Bhaskar Mitra</td>
-                  <td><a href="slides/03_TextMatchingI.pdf" target="_blank">draft slides</a></td>
+                  <td><a href="slides/03_TextMatchingI.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">11:20 - 12:20</th>
                   <td>Text Matching II</td>
                   <td>Mostafa Deghani, Christophe Van Gysel</td>
-                  <td><a href="slides/04_TextMatchingII.pdf" target="_blank">draft slides</a></td>
+                  <td><a href="slides/04_TextMatchingII.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">12:20 - 14:00</th>
@@ -274,13 +274,13 @@
                   <th scope="row" class="timeslot">14:00 - 14:45</th>
                   <td>Learning to Rank</td>
                   <td>Christophe Van Gysel, Bhaskar Mitra</td>
-                  <td><a href="slides/05_LearningToRank.pdf" target="_blank">draft slides</a></td>
+                  <td><a href="slides/05_LearningToRank.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">14:45 - 15:30</th>
                   <td>Modeling User Behavior</td>
                   <td>Alexey Borisov, Maarten de Rijke</td>
-                  <td><a href="slides/06_ModelingUserBehavior.pdf" target="_blank">draft slides</a></td>
+                  <td><a href="slides/06_ModelingUserBehavior.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">15:30 - 15:50</th>
@@ -292,18 +292,19 @@
                   <th scope="row" class="timeslot">15:50 - 16:35</th>
                   <td>Generating Responses</td>
                   <td>Mostafa Deghani, Tom Kenter</td>
-                  <td><a href="slides/07_GeneratingResponses.pdf" target="_blank">draft slides</a></td>
+                  <td><a href="slides/07_GeneratingResponses.pdf" target="_blank">section slides</a></td>
                 </tr>
                 <tr>
                   <th scope="row" class="timeslot">16:35 - 17:20</th>
                   <td>Wrap Up</td>
                   <td>All presenters</td>
-                  <td><a href="slides/08_WrapUp.pdf" target="_blank">draft slides</a></td>
+                  <td><a href="slides/08_WrapUp.pdf" target="_blank">section slides</a></td>
                 </tr>
               </tbody>
             </table>
 
-            <p><a href="slides/References.pdf" target="_blank">References</a></p>
+            <p><a href="slides/References.pdf" target="_blank">References</a> &mdash; <a href="slides/NN4IR.pdf" target="_blank">All slides</a></p>
+
         </div>
 
         <div id="organizers" class="container marketing">
