Reduce download button width.

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="jumbotron" style="position: relative; z-index: 0; padding-bottom: 1em">
             <h1 style="font-size: 2em">Neural Networks for Information Retrieval</h1>
             <p class="lead">Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems.</p>
-            <p><a class="btn btn-lg btn-success" href="slides/NN4IR.pdf" target="_blank" role="button" style="padding-top: .50rem; padding-bottom: .50rem; padding-left: 1rem"><img src="images/glyphicons-201-download.png" /> &nbsp; <span style="display: inline; vertical-align: text-top;">Download full deck of slides (PDF, 18MB)</span></a></p>
+            <p><a class="btn btn-lg btn-success" href="slides/NN4IR.pdf" target="_blank" role="button" style="padding-top: .50rem; padding-bottom: .50rem; padding-left: 1rem"><img src="images/glyphicons-201-download.png" /> &nbsp; <span style="display: inline; vertical-align: text-top;">Download slides (PDF, 18MB)</span></a></p>
             <h5>Full-day tutorial at SIGIR 2017 on August 7, 2017</h5>
         </div>
         <!-- /.container -->
