Remove superfluous row from ToC.

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                   <td />
                   <td />
                 </tr>
-                <tr>
+                <tr class="break">
                   <td scope="row" class="timeslot">10:50 - 11:20</th>
                   <td>Text Matching I (cont'd)</td>
                   <td>Alexey Borisov, Bhaskar Mitra</td>
