--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -145,7 +145,7 @@
         <div class="jumbotron">
             <h1 class="display-3">Neural Networks for Information Retrieval</h1>
             <p class="lead">Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems.</p>
-            <p><a class="btn btn-lg btn-info" href="wsdm-conference.org/2018/" role="button">More information on the WSDM website</a>
+            <p><a class="btn btn-lg btn-info" href="http://wsdm-conference.org/2018/" role="button">More information on the WSDM website</a>
             </p>
 
         </div>
