--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Machine learning plays an important role in many aspects of modern IR systems, and deep learning is applied to all of those. The fast pace of modern-day research into deep learning has given rise to many different approaches to many different IR problems. What are the underlying key technologies and what key insights into IR problems are they able to give us? This full-day tutorial gives a clear overview of current tried-and-trusted neural methods in IR and how they benefit IR research and our understanding of IR problems. Additionally, we peek into the future by examining recently introduced paradigms as well as current challenges. Expect to learn about neural networks in semantic matching, ranking, user interaction, and response generation in a highly interactive tutorial.">
-    <meta name="author" content="Tom Kenter, Alexey Borisov, Christophe van Gysel, Mostafa Dehghani, Maarten de Rijke, Bhaskar Mitra">
+    <meta name="author" content="Tom Kenter, Alexey Borisov, Christophe van Gysel, Mostafa Dehghani, Maarten de Rijke">
 
     <title>Neural Networks for Information Retrieval</title>
 
@@ -177,7 +177,7 @@
                 </div>
                 <!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <a href="http://chri.stophr.be"><img class="rounded-circle" src="http://1.gravatar.com/avatar/76ba539ef192f442ca774aba39003c80?s=180&d=mm&r=g" alt="Christophe Van Gysel" width="100" height="100">
+                    <a href="http://chri.stophr.be"><img class="rounded-circle" src="https://avatars0.githubusercontent.com/u/1120343?s=400&u=28dc19058f612532545ec4e71c0f8727a25c819a&v=4" alt="Christophe Van Gysel" width="100" height="100">
                         <h2>Christophe Van Gysel</h2>
                     </a>
                 </div>
