--- a/ecir2018/index.html
+++ b/ecir2018/index.html
@@ -167,7 +167,7 @@
                 </div>
                 <!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <a href="http://chri.stophr.be"><img class="rounded-circle" src="http://1.gravatar.com/avatar/76ba539ef192f442ca774aba39003c80?s=180&d=mm&r=g" alt="Christophe Van Gysel" width="100" height="100">
+                    <a href="http://chri.stophr.be"><img class="rounded-circle" src="https://avatars0.githubusercontent.com/u/1120343?s=400&u=28dc19058f612532545ec4e71c0f8727a25c819a&v=4" alt="Christophe Van Gysel" width="100" height="100">
                         <h2>Christophe Van Gysel</h2>
                     </a>
                 </div>
