Added Hosein, updated the program, and made the links visible.

--- a/wsdm2018/index.html
+++ b/wsdm2018/index.html
@@ -86,7 +86,7 @@
             margin-top: 1.5rem;
         }
         .marketing a {
-            color: #292b2c;
+            color: #6ac0e0;
         }
         .marketing a:hover {
             text-decoration: none;
@@ -126,6 +126,11 @@
             margin-bottom: 1.5rem;
             text-align: center;
         }
+
+        .marketing .col-lg-4 a {
+	     color: #292b2c;
+        }
+
         .marketing .col-lg-6 {
             margin-bottom: 1.5rem;
             text-align: center;
@@ -222,13 +227,13 @@
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">14:00 - 14:45</th>
-                  <td class="topic">Recommender systems</td>
+                  <td class="topic">Modeling User Behavior</td>
                   <!-- <td /> -->
                   <!-- <td /> -->
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">14:45 - 15:30</th>
-                  <td class="topic">Modeling User Behavior</td>
+                  <td class="topic">Generating Responses</td>
                   <!-- <td /> -->
                   <!-- <td /> -->
                 </tr>
@@ -240,13 +245,13 @@
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">16:00 - 16:45</th>
-                  <td class="topic">Generating Responses</td>
+                  <td class="topic">Industry insights</td>
                   <!-- <td /> -->
                   <!-- <td /> -->
                 </tr>
                 <tr>
                   <td scope="row" class="timeslot">16:45 - 17:30</th>
-                  <td class="topic">Industry insights</td>
+                  <td class="topic">Recommender systems and Q & A</td>
                   <!-- <td /> -->
                   <!-- <td /> -->
                 </tr>
@@ -295,18 +300,24 @@
             </div>
             <!-- /.row -->
             <div class="row">
-                <div class="col-lg-6 mostafa">
-                    <a href="http://humanities.uva.nl/~dehghani/"><img class="rounded-circle" src="http://2.gravatar.com/avatar/8d357c923d6d2ed63ab57fe779c1befc?s=180&d=mm&r=g" alt="Mostafa Dehghani" width="100" height="100">
-                        <h2>Mostafa Dehghani</h2>
-                    </a>
+		<div class="col-lg-4">
+                  <a href="https://staff.fnwi.uva.nl/h.azarbonyad/"><img class="rounded-circle" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAd4AAAAJDI5YTIxMDA2LWFhMTgtNDhjYi1hNzYwLWM0MDY4OWFlZWI2ZA.jpg" alt="Hosein Azarbonyad" width="100" height="100">
+                    <h2>Hosein Azarbonyad</h2>
+                  </a>
+		</div>
+		<!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                  <a href="http://humanities.uva.nl/~dehghani/"><img class="rounded-circle" src="http://2.gravatar.com/avatar/8d357c923d6d2ed63ab57fe779c1befc?s=180&d=mm&r=g" alt="Mostafa Dehghani" width="100" height="100">
+                    <h2>Mostafa Dehghani</h2>
+                  </a>
                 </div>
-                <!-- /.col-lg-6 -->
-                <div class="col-lg-6 maarten">
+                <!-- /.col-lg-4 -->
+                <div class="col-lg-4">
                     <a href="https://staff.fnwi.uva.nl/m.derijke/"><img class="rounded-circle" src="http://2.gravatar.com/avatar/e95563926a4885fc43a51a0bdb888d18?s=180&d=mm&r=g" alt="Maarten de Rijke" width="100" height="100">
                         <h2>Maarten de Rijke</h2>
                     </a>
                 </div>
-                <!-- /.col-lg-6 -->
+                <!-- /.col-lg-4 -->
             </div>
             <!-- /.row -->
         </div>
